--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
         run: npm run build  # Build the production-ready app
 
       - name: Deploy to GitHub Pages 🚀
-        uses: peaceiris/actions-gh-pages@v3  # Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          # github_token: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub token for authentication
-          personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: ./dist  # The folder to publish (Vite's build output)
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+      
