--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,30 +3,29 @@ name: Deploy Vite React to GitHub Pages
 on:
   push:
     branches:
-      - main  # Trigger deploy on pushes to the 'main' branch
+      - main
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest  # Use Ubuntu to run this job
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3  # Checkout your repo's code
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Set the Node version to use
+          node-version: 18
 
-      - name: Install dependencies 📦
-        run: npm install  # Install your project dependencies
+      - name: Install dependencies
+        run: npm install
 
-      - name: Build project 🏗️
-        run: npm run build  # Build the production-ready app
+      - name: Build the project
+        run: npm run build
 
-      - name: Deploy to GitHub Pages 🚀
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-      
